welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:3: error: type mismatch;
 found   : Int(110)
 required: Boolean
  if (90<=n<=110) {
             ^nearHundred:6: error: type mismatch;
 found   : Int(210)
 required: Boolean
  if (190<=n<=210) {
              ^