welcome.lessons.welcome.bat.bool1.NearHundred.scala.code
def nearHundred(n:Int): Boolean = {
  var x=false
  if (90<=n<=110) {
    x=true
  }
  if (190<=n<=210) {
    x=true
  }
  x
}